
2007-12-11 cjg
 * Added method of setting alternate template for a static file (using 
    foo.template file in same dir as foo.title etc.)
 * Added config option to searches to pick alternate template.
 * Added additional option to ScreenProcessor to allow custom template.

2007-12-11 cjg
 * Added code to pull an optional "match" value from the search form
    on set and subject fields. This allows you to specifiy an exact
    search, although there's no option in the form for this, it will
    be understood if part of the GET request.

2007-12-11 cjg
 * In default XML importer; fixed very minor bug that a field was not 
    cleared after use. Also rearranged code to be more suitable for 
    allowing URL formats other than file://

2007-12-11 cjg 
 * epadmin has new option "refresh_abstracts" which causes the webserver
    to regenerate abstract pages when they are requested. Closes ticket
    #3162 and probably deprcates generate_abstracts.

2007-12-11 cjg 
 * Rewrite now tests and recreates auto.js and auto.css if any of the 
    source files have changed.
 * There's now a configuration option to disable the test on auto.js and
    auto.css as they stat quite a lot of files. It seems faster.
 * auto.css now actually includes all the other .css files, rather than 
    using @import. This appears to significantly improve the time taken
    to load a page!
 * This all-but deprecates generate_static!

2007-12-12 tdb
 * 'x' and 'y' values will now sort correctly (along with ~n, 'e etc.), fixing
    #2944
 * Changed is_dom back to not use ->isa, due to inheritance problems in
    trim_whitespace under LibXML, fixing #3159

2007-12-13 cjg
 * Added first cut of AjaxSubject which dynamically loads subsections when
    selecting subjects in the deposit workflow. Comes with a cjg script to
    provide the subsections. Still needs some work. for #2857

2007-12-13 cjg
 * Templates are now reloaded if they have been modified since they were
    loaded. Closes #3163

