@@ -501,6 +501,7 @@ User Area CGI Scripts
     <epp:phrase id="cgi/users/status:nearly_out_of_space"><span class="alert">WARNING:</span> Available space for new items is running low</epp:phrase>
     <epp:phrase id="cgi/users/status:title">Server Status</epp:phrase>
     <epp:phrase id="Plugin/Screen/Admin:title">Admin</epp:phrase>
+    <epp:phrase id="Plugin/Screen/QA:title">QA</epp:phrase>
     <epp:phrase id="Plugin/Screen/FirstTool:title">No Tools Available</epp:phrase>
     <epp:phrase id="Plugin/Screen/Status:description">Status information for this server.</epp:phrase>
     <epp:phrase id="Plugin/Screen/Status:indexer_not_running">The full-text indexer is not currently running. You should start it to ensure full-text searching operates correctly. <epc:pin name="start_button" /></epp:phrase>
